demoProject/convert/objects/Account_Details__mdt.object
<CustomObject>
    <label>Account Details</label>
    <pluralLabel>Account Details</pluralLabel>
    <fields>
        <fullName>API_Name__c</fullName>
        <label>API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Child__c</fullName>
        <label>Parent/Child</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Label__c</fullName>
        <label>Section Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Type__c</fullName>
        <label>Section Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>